# galaxy-zoo-project

./: .gitignore  AGENTS.md  LICENSE  PROJECT_CONTEXT.md  README.md  pyproject.toml
docs/: EXPERIMENT_LOG.md
notebooks/: 01_data_exploration.ipynb  02_preprocess_dataset.ipynb  03_degrade_images.ipynb  04_reconstruction_baselines.ipynb
scripts/: analyze_reconstruction_task_correlation.py  degrade_data.py  preprocess_data.py  reconstruct_data.py  train_ml_baseline.py
src/galaxy_zoo_project/: __init__.py  correlation_analysis.py  correlation_analysis_cli.py  degradation.py  degrade_cli.py  ml_baseline.py  ml_baseline_cli.py  preprocess_cli.py  preprocessing.py  reconstruct_cli.py  reconstruction.py
