[project]
name = "galaxy-zoo-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "leverlars", email = "oskarjo@pm.me" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "kagglehub",
    "tqdm>=4.67.3",
]

[project.scripts]
degrade-galaxy-zoo = "galaxy_zoo_project.degrade_cli:main"
preprocess-galaxy-zoo = "galaxy_zoo_project.preprocess_cli:main"
reconstruct-galaxy-zoo = "galaxy_zoo_project.reconstruct_cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
